objects/Campaign.object
<CustomObject>
    <sharingModel>FullAccess</sharingModel>
    <fields>
        <fullName>Sync_Flag__c</fullName>
        <label>Sync Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merchant_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Merchant Id</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Merchant_Id__c.Type__c</field>
                <operation>equals</operation>
                <value>CC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Merchant_Id__c</referenceTo>
        <relationshipLabel>Campaigns (Merchant Id)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gc_event_id__c</fullName>
        <externalId>true</externalId>
        <label>GC Event ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>minimumAmounts__c</fullName>
        <label>Minimum Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACH_Merchant_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ACH Merchant Id</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Merchant_Id__c.Type__c</field>
                <operation>equals</operation>
                <value>ACH</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Merchant_Id__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>suggestedAmount__c</fullName>
        <label>suggestedAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Active Campaigns</label>
    </listViews>
    <validationRules>
        <fullName>enddate</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( EndDate )</errorConditionFormula>
        <errorDisplayField>EndDate</errorDisplayField>
        <errorMessage>This is a required field, please enter a date in the future. If you wish donations to be ongoing the recommended end date should be at least five years from today. The end date is always editable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>startdate</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(StartDate)</errorConditionFormula>
        <errorDisplayField>StartDate</errorDisplayField>
        <errorMessage>This is a required field. Please enter today&apos;s date or a date in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>startdatecheck</fullName>
        <active>true</active>
        <errorConditionFormula>StartDate &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>StartDate</errorDisplayField>
        <errorMessage>Event start date cannot be backdated. Please enter today&apos;s date or a date in the future on which contributions to this campaign will be accepted.</errorMessage>
    </validationRules>
</CustomObject>